--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@myorg/common-components": ["libs/common-components/src/index.ts"],
+      "@myorg/functions": ["libs/functions/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
