--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@swc/helpers": "~0.5.0",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "~4.18.1",
     "react": "18.2.0",
